@@ -125,7 +125,7 @@
 	{/if}
 	<TR class="light">
 		<TD COLSPAN="5" class="fall" ALIGN="right">
-			<A HREF="?m=rtticketadd&id={$queuedata.queue}">{t}New Ticket{/t} <IMG src="img/save.gif" ALT="" BORDER="0" ALIGN="absmiddle"></A>
+			<A HREF="?m=rtticketadd&id={$queuedata.queue}&userid={$search.userid}">{t}New Ticket{/t} <IMG src="img/save.gif" ALT="" BORDER="0" ALIGN="absmiddle"></A>
 		</TD>
 	</TR>
 </TABLE>
