@@ -24,11 +24,11 @@
 				    <SELECT size="1" name="ticket[userid]" {if !$ticket.userid}{tip trigger="requestor"}{/if} {tip text="Select customer from list or enter his data if is not a customer"} onChange="document.forms['ticket'].elements['ticket[custid]'].value=document.forms['ticket'].elements['ticket[userid]'].value">
 					<OPTION value="0">- {t}select customer{/t} -</OPTION>
 					{foreach from=$userlist item=userlist}
-					    <OPTION value="{$userlist.id}" {if $userlist.id == $user}SELECTED{/if}>{$userlist.username} ({$userlist.id|string_format:"%04d"})</OPTION>
+					    <OPTION value="{$userlist.id}" {if $userlist.id == $userid}SELECTED{/if}>{$userlist.username} ({$userlist.id|string_format:"%04d"})</OPTION>
 					{/foreach}
 				    </SELECT>
 				    <NOBR>{t}or Customer ID:{/t}
-				    <INPUT TYPE="TEXT" NAME="ticket[custid]" VALUE="{$ticket.custid}" SIZE="5" onChange="document.forms['ticket'].elements['ticket[userid]'].value=document.forms['ticket'].elements['ticket[custid]'].value" {tip trigger="custid"}>
+				    <INPUT TYPE="TEXT" NAME="ticket[custid]" VALUE="{$userid}" SIZE="5" onChange="document.forms['ticket'].elements['ticket[userid]'].value=document.forms['ticket'].elements['ticket[custid]'].value" {tip trigger="custid"}>
 				    </NOBR>
 				</TD>
 			    </TR>
