@@ -6,6 +6,8 @@ version ? (??/??/????):
   - bugfix: debtors counting in UserStats() for MySQL (alec)
   - icon invoice_pay.gif renamed to pay.gif (alec)
   - changed icon for standing payments accounting (alec)
+  - BTS#0000360: ticket adding in customer context (alec)
+  - bugfix: error handling while ticket addition (alec) 
 
 version 1.6.0rc3 Thor (23/05/2005):
 
